# tock-genai-core

./: .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: github_ci.yml
src/tock_genai_core/: __init__.py
src/tock_genai_core/models/contextual_compressor/: __init__.py  provider.py  setting.py  types.py
src/tock_genai_core/models/contextual_compressor/bloomz/: bloomz_compressor_setting.py
src/tock_genai_core/models/database/: __init__.py  metadata.py  provider.py  setting.py  types.py
src/tock_genai_core/models/database/opensearch/: opensearch_db_setting.py
src/tock_genai_core/models/database/pgvector/: pgvector_db_setting.py
src/tock_genai_core/models/database/postgres/: pgvector_db_setting.py  postgres_db_setting.py
src/tock_genai_core/models/embedding/: __init__.py  provider.py  setting.py  types.py
src/tock_genai_core/models/embedding/azure_openai/: azure_openai_em_setting.py
src/tock_genai_core/models/embedding/bloomz/: bloomz_em_setting.py
src/tock_genai_core/models/embedding/openai/: openai_em_setting.py
src/tock_genai_core/models/embedding/vllm/: vllm_em_setting.py
src/tock_genai_core/models/guardrail/: __init__.py  provider.py  setting.py  types.py
src/tock_genai_core/models/guardrail/bloomz/: bloomz_guardrail_setting.py
src/tock_genai_core/models/langfuse/: __init__.py  setting.py
src/tock_genai_core/models/llm/: __init__.py  provider.py  setting.py  types.py
src/tock_genai_core/models/llm/azure_openai/: azure_openai_llm_setting.py
src/tock_genai_core/models/llm/openai/: openai_llm_setting.py
src/tock_genai_core/models/llm/tgi/: tgi_llm_setting.py
src/tock_genai_core/models/llm/vllm/: vllm_setting.py
src/tock_genai_core/models/security/: __init__.py  secret_key.py  secret_key_type.py  security_type.py
src/tock_genai_core/models/security/aws_secret_key/: __init__.py  aws_secret_key.py
src/tock_genai_core/models/security/gcp_secret_key/: __init__.py  (+1 more)
src/tock_genai_core/services/: compressor.py  embedding.py  guardrail.py
src/tock_genai_core/services/database/: __init__.py  opensearch.py  postgres.py
src/tock_genai_core/services/langchain/: chain_utils.py  ingest_chain.py  qa_chain.py  rag_chain.py
src/tock_genai_core/services/langfuse/: handler.py
src/tock_genai_core/services/security/: __init__.py  security_service.py
src/tock_genai_core/utils/aws/: aws_secrets_manager_client.py
src/tock_genai_core/utils/gcp/: gcp_secret_manager_client.py
tests/: test_tock_genai_code.py
tests/factory/: test_compressor_factory.py  test_db_factory.py  test_em_factory.py  test_guardrail_factory.py  test_llm_factory.py
tests/security/: test_secrets.py
tests/services/security/: test_secrets.py
(+29 files in other folders)
