[tool.poetry]
name = "tock-genai-code"
version = "0.1.0"
description = ""
authors = ["Baptiste Le Goff <baptiste.le-goff@arkea.com>"]
readme = "README.md"
packages = [{include = "tock_genai_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]


[tool.poetry.group.test.dependencies]
tox = "^4.23.2"
coverage = "^7.6.10"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"