[tool.poetry]
name = "tock-genai-core"
version = "1.4.0"
description = ""
authors = ["Baptiste Le Goff <baptiste.le-goff@arkea.com>"]
readme = "README.md"
packages = [{include = "tock_genai_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^3.1.0"
langchain  =  "^0.3.23"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.13"
langchain-postgres = "^0.0.14"
langfuse = "^3.2.1"
opensearch-py = "^2.8.0"
pandas = "^2.2.3"
pydantic-settings = "^2.7.1"
text-generation = "^0.7.0"
tiktoken = "^0.8.0"
uvicorn = "^0.34.0"
boto3 = "^1.35.96"
google-cloud-secret-manager = "^2.22.0"
google-api-core = "^2.25.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
black = "^25.1.0"
flake8 = "^7.2.0"

httpx-auth-awssigv4 = "^0.1.4"
openmock = "^3.1.2"
parameterized = "^0.9.0"
requests-mock = "^1.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-httpx = "^0.35.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
